# peleng-videoInformation

./: CMakeLists.txt  VideoInformation.sln  VideoInformation.vcxproj  main.cpp
